--- a/docs/package.json
+++ b/docs/package.json
@@ -33,7 +33,7 @@
     "@angular/compiler-cli": "4.1.3",
     "@types/node": "6.0.74",
     "angular-cli-ghpages": "0.5.0",
-    "doc-prsr": "^1.0.0",
+    "doc-prsr": "2.0.1",
     "documentation": "^4.0.0-rc.1",
     "rimraf": "2.6.1",
     "roboto-fontface": "^0.7.0",
