feat(rkSwitch): component implementation with examples. Closes #72 (#123)
* feat(rkSwitch): component implementation + examples

* build(common): update npm scripts (lint/watch-lib)

* refactor(rkSwitch): propTypes implementation

* refactor(example/switch): component row style

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,16 @@
         "render"
       ]
     }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".android.js",
+          ".ios.js"
+        ]
+      }
+    }
   }
 }
