refactor(lint): gallery screen - jsx/closing-bracket-location

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,10 @@
   "extends": "eslint-config-akveo-react",
   "parser": "babel-eslint",
   "rules": {
+    "react/jsx-closing-bracket-location": [1, {
+      "selfClosing": "tag-aligned",
+      "nonEmpty": "after-props"
+    }],
     "react/sort-comp": [1, {
       "order": [
         "prop-types",
