refactor(lint): explorer app (#132)
* refactor(lint): react/jsx-closing-bracket-location

* refactor(lint): explorer app - button screen

* refactor(lint): explorer app - selectable components screen

* refactor(lint): explorer app - choice screen

* refactor(lint): explorer app - components screen

* refactor(lint): explorer app - image screen

* refactor(lint): explorer app - input screen

* refactor(lint): explorer app - picker screen

* refactor(lint): explorer app - settings screen

* refactor(lint): explorer app - switch screen

* refactor(lint): explorer app - tabs screen

* refactor(lint): explorer app - avatar screen

* refactor(lint): explorer app - styles

* refactor(lint): explorer app - app.js

* refactor(lint): explorer app - screens apply jsx/closing-bracket-location

* build(common): update react native lint dependency

* fix(data): rename users with abstract names

* refactor(lint): add react/jsx-boolean-value rule

* refactor(lint): jsx-quotes - ComponentsScreen

* refactor(lint): extra quotes - SettingsScreen

* refactor(lint): transform render method to function

* docs(common): update doc-prsr dependency

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,8 @@
 {
-  "extends": "eslint-config-akveo-react",
+  "extends": "eslint-config-akveo-react-native",
   "parser": "babel-eslint",
   "rules": {
-    "react/jsx-closing-bracket-location": [1, {
-      "selfClosing": "tag-aligned",
-      "nonEmpty": "after-props"
-    }],
+    "react/jsx-boolean-value": [1, "always"],
     "react/sort-comp": [1, {
       "order": [
         "prop-types",
@@ -51,16 +48,5 @@
         ]
       }
     }]
-  },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [
-          ".js",
-          ".android.js",
-          ".ios.js"
-        ]
-      }
-    }
   }
 }
