--- a/example/package.json
+++ b/example/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "expo": "28.0.0",
     "metro-bundler": "0.22.1",
+    "prop-types": "^15.5.10",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.1.tar.gz",
     "react-native-ui-kitten": "3.0.1",
     "react-native-vector-icons": "4.3.0",
-    "react-navigation": "1.5.11"
+    "react-navigation": "1.5.11",
+    "lodash": "4.17.10"
   },
   "devDependencies": {
     "gulp": "3.9.1",
