--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "lint": "eslint src/**/*",
     "prepush": "npm run lint",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm link eslint-config-akveo-react"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
   "dependencies": {
@@ -22,7 +21,7 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-react-native": "4.0.0",
     "eslint": "4.19.1",
-    "eslint-config-akveo-react": "git+https://github.com/akveo/eslint-config-akveo.git",
+    "eslint-config-akveo-react-native": "1.0.0",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "^7.7.0",
