--- a/package.json
+++ b/package.json
@@ -3,13 +3,42 @@
   "version": "3.1.2",
   "license": "MIT",
   "author": "akveo <contact@akveo.com>",
-  "main": "index.js",
   "homepage": "https://github.com/akveo/react-native-ui-kitten#readme",
   "repository": "git+https://github.com/akveo/react-native-ui-kitten.git",
   "bugs": {
     "url": "https://github.com/akveo/react-native-ui-kitten/issues"
   },
   "scripts": {
-
+    "start": "npm run build:pg && npm start --prefix ./src/playground",
+    "build:src": "tsc -p ./src/framework/tsconfig.json",
+    "build:pg": "( cd ./src/playground && npm install ) && tsc -p ./src/playground/tsconfig.json",
+    "build": "npm run build:src && npm run build:pg",
+    "clean:src": "rimraf ./dist/src/framework",
+    "clean:pg": "rimraf ./dist/src/playground",
+    "clean": "rimraf ./dist",
+    "lint:src": "tslint --project ./src/framework/tsconfig.json ./src/framework/**/*.ts{,x}",
+    "lint:src-fix": "npm run lint:src -- --fix",
+    "lint:pg": "tslint --project ./src/playground/tsconfig.json ./src/playground/**/*.ts{,x}",
+    "lint:pg-fix": "npm run lint:pg -- --fix",
+    "lint": "npm run lint:src && npm run lint:pg",
+    "lint:fix": "npm run lint:src-fix && npm run lint:pg-fix",
+    "ci:rebuild": "npm run clean && npm run build",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.8",
+    "@types/react": "^16.4.18",
+    "@types/react-native": "^0.57.7",
+    "babel-jest": "^23.6.0",
+    "babel-preset-react-native": "^4.0.1",
+    "husky": "^1.1.2",
+    "jest": "^23.6.0",
+    "react": "^16.6.0",
+    "react-native": "^0.57.4",
+    "react-native-typescript-transformer": "^1.2.10",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^23.10.4",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   }
 }
