--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "@types/jest": "^23.3.8",
     "@types/react": "^16.4.18",
     "@types/react-native": "^0.57.7",
+    "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "^23.6.0",
     "babel-preset-react-native": "^4.0.1",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "react": "^16.6.0",
     "react-native": "^0.57.4",
+    "react-native-testing-library": "^1.3.0",
     "react-native-typescript-transformer": "^1.2.10",
+    "react-test-renderer": "^16.6.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   }
