build(common): add theme module

--- a/src/framework/tsconfig.json
+++ b/src/framework/tsconfig.json
@@ -11,7 +11,11 @@
     "target": "es2017",
     "lib": [
       "es2017"
-    ]
+    ],
+    "paths": {
+      "@rk-kit/theme": ["./theme"],
+      "@rk-kit/ui": ["./ui"]
+    }
   },
   "typeRoots": [
     "../../node_modules/@types"
