--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "react": "^16.6.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-native": "^0.57.4",
+    "react-native-mock": "^0.3.1",
     "react-native-testing-library": "^1.3.0",
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "^16.6.0",
     "rimraf": "^2.6.2",
+    "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.6"
   }
 }
