build(test): configure jest with typescript

--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/runtime": "^7.1.2",
     "@types/jest": "^23.3.8",
     "@types/react": "^16.4.18",
     "@types/react-native": "^0.57.7",
     "@types/react-test-renderer": "^16.0.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "babel-preset-react-native": "^4.0.1",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
-    "react": "^16.6.0",
+    "metro-react-native-babel-preset": "^0.49.0",
     "react-addons-test-utils": "^15.6.2",
+    "react": "^16.6.0",
     "react-native": "^0.57.4",
     "react-native-mock": "^0.3.1",
     "react-native-testing-library": "^1.3.0",
