--- a/src/framework/tsconfig.json
+++ b/src/framework/tsconfig.json
@@ -2,15 +2,17 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "../../dist",
+    "outDir": "../../dist/tsc-out",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "jsx": "react-native",
     "module": "es2015",
     "target": "es2017",
     "lib": [
-      "es2017"
+      "es2015",
+      "es2016"
     ],
     "paths": {
       "@rk-kit/theme": ["./theme"],
