--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
-    "sourceMap": true,
     "jsx": "react-native",
-    "module": "es2015",
     "target": "es2017",
+    "module": "es2015",
     "lib": [
-      "es2017"
+      "es2015",
+      "es2016"
+    ],
+    "typeRoots": [
+      "./node_modules/@types"
     ]
   },
-  "typeRoots": [
-    "./node_modules/@types"
+  "exclude": [
+    "./node_modules"
   ]
 }
