build(playground): expo-31 upgrade

--- a/src/playground/app.json
+++ b/src/playground/app.json
@@ -3,7 +3,7 @@
     "name": "react-native-ui-kitten-playground",
     "description": "react-native-ui-kitten-playground",
     "slug": "playground",
-    "sdkVersion": "30.0.0",
+    "sdkVersion": "31.0.0",
     "platforms": [
       "android",
       "ios"
@@ -11,7 +11,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "packagerOpts": {
-      "config": "./rn-cli.config.js"
+      "config": "./metro.config.js"
     }
   }
 }
