feat(theme): token integration (#191)

--- a/src/framework/tsconfig.json
+++ b/src/framework/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "../../dist/tsc-out",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "jsx": "react-native",
