--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
+  },
+  "dependencies": {
+    "hoist-non-react-statics": "^3.2.1"
   }
 }
