--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:fix": "npm run lint:src-fix && npm run lint:pg-fix",
     "ci:lint": "npm run lint",
     "ci:build": "npm run build:pg",
-    "ci:test": "npm test",
+    "ci:test": "npm test -- --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
     "test": "jest"
   },
   "devDependencies": {
@@ -36,11 +36,12 @@
     "@types/react-test-renderer": "^16.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "coveralls": "^3.0.2",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "metro-react-native-babel-preset": "^0.49.0",
-    "react-addons-test-utils": "^15.6.2",
     "react": "^16.6.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-native": "^0.57.4",
     "react-native-mock": "^0.3.1",
     "react-native-testing-library": "^1.3.0",
