--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^23.3.8",
     "@types/react": "^16.4.18",
     "@types/react-native": "^0.57.7",
+    "@types/react-navigation": "^2.13.7",
     "@types/react-test-renderer": "^16.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
