--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "expo": "^31.0.4",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react-navigation": "^3.0.7"
   },
   "devDependencies": {
     "react-native-typescript-transformer": "^1.2.10"
