feat(theme): state mappings (#210)
* feat(theme): state mappings

* feat(theme): state mappings - multiple

--- a/src/playground/src/theme-token/mapping.json
+++ b/src/playground/src/theme-token/mapping.json
@@ -4,17 +4,45 @@
       "backgroundColor",
       "textColor"
     ],
+    "states": [
+      "active",
+      "disabled"
+    ],
     "variants": {
       "default": {
         "backgroundColor": "background-color-sample-default",
-        "textColor": "text-color-sample-default"
+        "textColor": "text-color-sample-default",
+        "state": {
+          "active": {
+            "backgroundColor": "background-color-sample-dark",
+            "textColor": "text-color-sample-dark"
+          },
+          "disabled": {
+            "textColor": "text-color-sample-default-disabled"
+          }
+        }
       },
       "dark": {
         "backgroundColor": "background-color-sample-dark",
-        "textColor": "text-color-sample-dark"
+        "textColor": "text-color-sample-dark",
+        "state": {
+          "active": {
+            "backgroundColor": "background-color-sample-default",
+            "textColor": "text-color-sample-default"
+          }
+        }
       },
       "success": {
-        "textColor": "text-color-sample-success"
+        "textColor": "text-color-sample-success",
+        "state": {
+          "active": {
+            "backgroundColor": "background-color-sample-default",
+            "textColor": "text-color-sample-success-active"
+          },
+          "disabled": {
+            "backgroundColor": "background-color-sample-success-disabled"
+          }
+        }
       }
     }
   }
