feat(ui): Radio. Closes #201 (#212)
* feat(ui/radio): initial compomponent implementation

* feat(ui/radio): state mapping support

* feat(ui/radio): apply design styles

* test(radio): add radio component tests

* test(ui/radio): [temporary] radio tests

* feat(theme): add appearances mapping config

* refactor(theme): split theme service

* refactor(theme): remove useless tests

* refactor(theme): [temporary] mapping & style services

* merge: style-consumer-appearance-support

* refactor(theme): style-consumer methods refactor, move to service

* refactor(theme): remove unused imports from style-consumer

* refactor(theme): move method from hoc to service (style-consumer)

* refactor(theme): framework ui-component imports refactor (style-component is decorator now).

* test(theme): style-consumer-service spec add

* refactor(theme): style-consumer-service functions refactor

* refactor(theme): style-consumer-service as a class implement and integrate

* build(tsconfig): allow using decorators switch-on

* refactor(theme): styled decorator rename

* feat(theme): createStyle function supporting appearances

* refactor(theme): style consumer service

* refactor(ui/radio): adopt component to new config

* test(theme): adopt theme test to new config

* refactor(playground): remove sample component

* feat(playground): update radio screen examples

* build(package): react-native-testing-library update

* test(ui/radio): add radio component snapshot tests

* refactor(playground): adopt radio screen to appearances config

--- a/src/framework/tsconfig.json
+++ b/src/framework/tsconfig.json
@@ -11,6 +11,7 @@
     "jsx": "react-native",
     "module": "es2015",
     "target": "es2017",
+    "experimentalDecorators": true,
     "lib": [
       "es2015",
       "es2016"
