--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react-native",
     "target": "es2017",
     "module": "es2015",
+    "experimentalDecorators": true,
     "lib": [
       "es2015",
       "es2016"
