feat(theme): eva integration (#227)
* feat(theme): style provider cache service

* refactor(theme) adopt to eva exports

* refactor(theme): move app container -> style provider

* refactor(theme): split style specs

* refactor(theme): split theme specs

* refactor(theme): move types to common type file

* refactor(theme): expect style values to match snapshot

* test(theme): fix radio snapshot

* test(theme): add style consumer uncovered cases tests

* build(package): update eva dependency

* refactor(framework): adopt to eva package

* refactor(playground): adopt to eva package

* refactor(framework): adopt to eva package

* refactor(theme): style creation to style consumer service

* refactor(package): adopt to eva exports

* refactor(framework): code re-arrange

* fix(package): update eva dependency path

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "ci:test": "npm test -- --coverage && cat ./dist/jest/coverage/lcov.info | coveralls",
     "test": "jest"
   },
+  "dependencies": {
+    "eva": "github:akveo/eva",
+    "hoist-non-react-statics": "^3.2.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/runtime": "^7.1.2",
@@ -52,8 +56,5 @@
     "ts-jest": "^23.10.5",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
-  },
-  "dependencies": {
-    "hoist-non-react-statics": "^3.2.1"
   }
 }
