--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -4,7 +4,11 @@
     "baseUrl": "./",
     "jsx": "react",
     "paths": {
-      "@rk-kit/*": ["./src/framework/*"]
+      "@eva/*": ["./node_modules/eva/packages/*"],
+      "@kitten/*": ["./src/framework/*"]
     }
-  }
+  },
+  "include": [
+    "./node_modules/eva"
+  ]
 }
