--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,11 @@
     "experimentalDecorators": true,
     "lib": [
       "es2015",
-      "es2016"
+      "es2016",
+      "es2017.object"
     ],
     "typeRoots": [
       "./node_modules/@types"
     ]
-  },
-  "exclude": [
-    "./node_modules"
-  ]
+  }
 }
